Add testHS and run test in notebook

--- a/notebooks/train_test_nodewise.ipynb
+++ b/notebooks/train_test_nodewise.ipynb
@@ -461,17 +461,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_len1(pop):\n",
-    "    pop = np.append(pop, pop[0]+0.00001)\n",
-    "    return pop"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 200,
    "metadata": {},
    "outputs": [],
@@ -480,10 +469,11 @@
     "def conf_int_mse_ratio(pop_1, pop_2, node_val_inbag, type=\"classification\", alpha=0.05):\n",
     "    '''Calculate shrinkage parameter based on confidence interval based on 2-sample difference in MSE'''\n",
     "\n",
+    "    # if sample sizes are ==1 add one more item which is very close to original value\n",
     "    if len(pop_1)==1:\n",
-    "        pop_1 = add_len1(pop_1)\n",
+    "        pop_1 = np.append(pop_1, pop_1[0]+0.00001)\n",
     "    if len(pop_2)==1:\n",
-    "        pop_2 = add_len1(pop_2)\n",
+    "        pop_2 = np.append(pop_2, pop_2[0]+0.00001)\n",
     "    \n",
     "    # number of samples per population\n",
     "    n1 = len(pop_1) #pop1 = y_true_inbag\n",
@@ -1034,6 +1024,320 @@
    "source": [
     "In this case the mse is identical for both approaches"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test penalty of lambda instead of term"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\hat{f}_\\lambda(x) \\coloneqq  \\hat{\\mathbb{E}}_{t_0}\\{y\\} + \\sum_{l=1}^L\\dfrac{\\hat{\\mathbb{E}}_{t_l}\\{y\\}-\\hat{\\mathbb{E}}_{t_{l-1}}\\{y\\}}{1+\\lambda*(1-m_l)/N(t_{l-1})}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load titanic\n",
+    "data = pd.read_csv(\"../raw_data/titanic/titanic_train.csv\")\n",
+    "data = data[data[\"Age\"].notnull()] #filter rows which are nan\n",
+    "data[\"Sex\"] = pd.get_dummies(data[\"Sex\"])[\"female\"] #dummy code sex (1==Female)\n",
+    "X = data[['Age', 'Pclass', 'Sex', 'PassengerId']]\n",
+    "y = data[\"Survived\"].astype(\"float\")\n",
+    "X, X_holdout, y, y_houldout = train_test_split(X, y, test_size=0.2, shuffle=True, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train RF with min sample leaf=3 on train set\n",
+    "rf_train = RandomForest(n_trees= 100, treetype=\"classification\", oob=False, random_state=42)\n",
+    "rf_train.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7530788177339902"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "y_pred_holdout = rf_train.predict(X_holdout)\n",
+    "roc_auc_score(y_houldout, y_pred_holdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# perfrom Gridsearch for best lambda\n",
+    "rf_mse = RandomForest(n_trees= 100, treetype=\"classification\", oob=True, testHS=True, HS_nodewise_shrink_type=\"MSE_ratio\", random_state=42)\n",
+    "grid = {\"HS_lambda\": [0.1, 1, 5, 10, 25, 50, 100]}\n",
+    "grid_cv_res = GridSearchCV_scratch(rf_mse, grid, X_train, y_train, cv=3, scoring_func=roc_auc_score, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'best_param_comb': (0.1,),\n",
+       " 'best_test_score': 0.7550890912520792,\n",
+       " 'best_test_scores': array([0.79824561, 0.72140762, 0.74561404]),\n",
+       " 'mean_test_scores': array([0.75508909, 0.75136767, 0.74528391, 0.74066214, 0.72481607,\n",
+       "        0.71976557, 0.72245374]),\n",
+       " 'param_combinations': [(0.1,), (1,), (5,), (10,), (25,), (50,), (100,)],\n",
+       " 'cv_scores_p_split': array([[0.79824561, 0.72140762, 0.74561404],\n",
+       "        [0.77192982, 0.73655914, 0.74561404],\n",
+       "        [0.75877193, 0.74462366, 0.73245614],\n",
+       "        [0.74122807, 0.75268817, 0.72807018],\n",
+       "        [0.74122807, 0.74462366, 0.68859649],\n",
+       "        [0.74122807, 0.72947214, 0.68859649],\n",
+       "        [0.74122807, 0.73753666, 0.68859649]])}"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_cv_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_mse = RandomForest(n_trees= 100, treetype=\"classification\", HS_lambda=0.1, oob=True, testHS=True, HS_nodewise_shrink_type=\"MSE_ratio\", random_state=42)\n",
+    "rf_mse.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7588259441707718"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "y_pred_holdout = rf_mse.predict(X_holdout)\n",
+    "roc_auc_score(y_houldout, y_pred_holdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create one dataset and use it to optimize best value for lambda \n",
+    "X, y = make_friedman1(n_samples=444, n_features=10, noise=1, random_state=42)\n",
+    "X, X_holdout, y, y_houldout = train_test_split(X, y, test_size=0.2, shuffle=True, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train RF with min sample leaf=3 on train set\n",
+    "rf_train = RandomForest(n_trees= 100, treetype=\"regression\", oob=False, random_state=42)\n",
+    "rf_train.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.3265505840124945"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_holdout = rf_train.predict(X_holdout)\n",
+    "mean_squared_error(y_houldout, y_pred_holdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# perfrom Gridsearch for best lambda\n",
+    "rf_mse = RandomForest(n_trees= 100, treetype=\"regression\", oob=True, testHS=True, HS_nodewise_shrink_type=\"MSE_ratio\", random_state=42)\n",
+    "grid = {\"HS_lambda\": [0.1, 1, 5, 10, 25, 50, 100]}\n",
+    "grid_cv_res = GridSearchCV_scratch(rf_mse, grid, X_train, y_train, cv=3, scoring_func=r2_score, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'best_param_comb': (0.1,),\n",
+       " 'best_test_score': 0.6078448163274967,\n",
+       " 'best_test_scores': array([0.58441886, 0.61950888, 0.6196067 ]),\n",
+       " 'mean_test_scores': array([0.60784482, 0.59786438, 0.56157145, 0.52578757, 0.44674558,\n",
+       "        0.35891581, 0.25341161]),\n",
+       " 'param_combinations': [(0.1,), (1,), (5,), (10,), (25,), (50,), (100,)],\n",
+       " 'cv_scores_p_split': array([[0.58441886, 0.61950888, 0.6196067 ],\n",
+       "        [0.57269369, 0.61024447, 0.61065496],\n",
+       "        [0.53027976, 0.57584487, 0.57858973],\n",
+       "        [0.4895302 , 0.54075612, 0.54707638],\n",
+       "        [0.40257575, 0.46077522, 0.47688576],\n",
+       "        [0.30922365, 0.36980893, 0.39771484],\n",
+       "        [0.19977939, 0.25917279, 0.30128265]])}"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_cv_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.597598349276802"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_holdout = rf_mse.predict(X_holdout)\n",
+    "mean_squared_error(y_houldout, y_pred_holdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.1,)"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check against normal HS\n",
+    "rf_hs = RandomForest(n_trees= 100, treetype=\"regression\", oob=False, HShrinkage=True,random_state=42)\n",
+    "grid = {\"HS_lambda\": [0.1, 1, 5, 10, 25, 50, 100]}\n",
+    "grid_cv_hs = GridSearchCV_scratch(rf_hs, grid, X_train, y_train, cv=3, scoring_func=r2_score, shuffle=True, random_state=42)\n",
+    "grid_cv_hs.get(\"best_param_comb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.3464975944714705"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_holdout = rf_hs.predict(X_holdout)\n",
+    "mean_squared_error(y_houldout, y_pred_holdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
