Create plots for clf and regression

--- a/notebooks/Experiment_PredPerf.ipynb
+++ b/notebooks/Experiment_PredPerf.ipynb
@@ -236,8 +236,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classification"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +276,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save figure\n",
+    "fig.savefig(f\"{data_path_clf}/clf_plots.png\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -299,10 +325,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save figure\n",
+    "fig.savefig(f\"{data_path_reg}/reg_plots.png\")"
+   ]
   }
  ],
  "metadata": {
