Add random state for GridSearch

--- a/notebooks/Experiment_DecBound.ipynb
+++ b/notebooks/Experiment_DecBound.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter kann nicht gestartet werden. Fehler beim Versuch, Jupyter zu finden: Zum Ausführen von Zellen ist das notebook und jupyter-Paket erforderlich.\n",
+      "\u001b[1;31mFühren Sie den folgenden Befehl aus, um „jupyter und notebook“ in der Python-Umgebung zu installieren. \n",
+      "\u001b[1;31mBefehl: „python -m pip install jupyter notebook -U\n",
+      "\u001b[1;31mor\n",
+      "\u001b[1;31mconda install jupyter notebook -U“\n",
+      "\u001b[1;31mKlicken Sie <a href='https://aka.ms/installJupyterForVSCode'>hier</a>, um weitere Informationen zu erhalten."
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -131,21 +145,21 @@
     "\n",
     "    rf_HS = RandomForest(n_trees=n_estimators, treetype='classification', \n",
     "                            HShrinkage=True, random_state=random_state)\n",
-    "    grid_cv_HS = GridSearchCV_scratch(rf_HS, grid, X_small, y_train, 3, roc_auc_score)\n",
+    "    grid_cv_HS = GridSearchCV_scratch(rf_HS, grid, X_small, y_train, 3, roc_auc_score, random_state=random_state)\n",
     "    y_pred_HS = rf_HS.predict(X_test.iloc[:,most_imp_feats])\n",
     "    print(\"hsRF prediction complete\")\n",
     "\n",
     "    #AugHSRF smSHAP\n",
     "    rf_HSsmSH = RandomForest(n_trees=n_estimators, treetype='classification', oob=True, oob_SHAP=True,\n",
     "                            HS_smSHAP=True, random_state=random_state)\n",
-    "    grid_cv_HSsmSH = GridSearchCV_scratch(rf_HSsmSH, grid, X_small, y_train, 3, roc_auc_score)\n",
+    "    grid_cv_HSsmSH = GridSearchCV_scratch(rf_HSsmSH, grid, X_small, y_train, 3, roc_auc_score, random_state=random_state)\n",
     "    y_pred_HSsmSH = rf_HSsmSH.predict(X_test.iloc[:,most_imp_feats])    \n",
     "    print(\"AughsRF w. Smooth SHAP prediction complete\")\n",
     "    \n",
     "    #AugHSRF MSE\n",
     "    rf_HSmse= RandomForest(n_trees=n_estimators, treetype='classification', oob=True, oob_SHAP=True,\n",
     "                            HS_nodewise_shrink_type=\"MSE_ratio\", random_state=random_state)\n",
-    "    grid_cv_HSmse = GridSearchCV_scratch(rf_HSmse, grid, X_small, y_train, 3, roc_auc_score)\n",
+    "    grid_cv_HSmse = GridSearchCV_scratch(rf_HSmse, grid, X_small, y_train, 3, roc_auc_score, random_state=random_state)\n",
     "    y_pred_HSmse = rf_HSmse.predict(X_test.iloc[:,most_imp_feats])    \n",
     "    print(\"AughsRF w. nodewise mse prediction complete\")\n",
     "\n",
@@ -640,7 +654,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_master",
+   "display_name": "hs_shrinkage",
    "language": "python",
    "name": "python3"
   },
@@ -654,12 +668,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.10.6 (main, Nov 30 2022, 18:53:57) [Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d94c025da75328d2d5dd40c3f3401a47786a54e19e1715d7009c05d4603d2d1a"
+    "hash": "ba0dea9307d0c4346c51e7770f4779439eb221952bbefe3363dda1641c4fee0e"
    }
   }
  },
