--- a/notebooks/Experiment_NullPower.ipynb
+++ b/notebooks/Experiment_NullPower.ipynb
@@ -907,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.6.13 (default, Feb 20 2021, 21:42:50) \n[GCC 5.4.0 20160609]"
   },
   "orig_nbformat": 4,
   "vscode": {
