Add Documentation notebook

--- a/notebooks/Documentation_TreeModelsfromScratch.ipynb
+++ b/notebooks/Documentation_TreeModelsfromScratch.ipynb
@@ -11,7 +11,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,7 +46,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,28 +53,26 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The `TreeModelfromScratch` python module includes algorithms for decision trees and random forests for classification and regression tasks, and tools for model selection, model evaluation, and other utilities.<br>\n",
     "The module includes two main classes: `DecisionTree` and `RandomForest`. These classes allow instantiating “regular” versions of these tree-based models without regularization. They also come with functions to apply HS and Aug HS regularization post-hoc.<br>\n",
-    "This notebook includes examples on how to instantiate and train the different model types. "
+    "This notebook includes examples on how to instantiate and train the different model versions. **Please note**, that  we only show examples for the classification model type. For regression models one simply needs to set `treetype=\"regression\"`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load and clean data"
+    "## Load and clean data"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For classification we use the Titanic dataset for this example"
+    "In this notebook we use the classification models and the Titanic dataset"
    ]
   },
   {
@@ -122,7 +118,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -130,7 +125,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,7 +144,9 @@
     "    - Similar to sklearn's `max_features`\n",
     "    - If int, then consider `n_feature` features at each split\n",
     "    - If float, then `n_feature` is a fraction and `max(1, int(n_feature * n_features_in_))` features are considered at each split\n",
-    "    - If `\"sqrt\"`, then `max_features=sqrt(n_features)`"
+    "    - If `\"sqrt\"`, then `max_features=sqrt(n_features)`\n",
+    "    \n",
+    "**Please note**, that the in following we only showcase the classification model type. For regression models one simply needs to set `treetype=\"regression\"`."
    ]
   },
   {
@@ -187,7 +183,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -255,7 +250,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -282,7 +276,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -290,7 +283,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -317,7 +309,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -325,7 +316,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -376,7 +366,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -384,7 +373,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -423,7 +411,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -431,7 +418,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -467,7 +453,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -498,7 +483,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -538,7 +522,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -546,7 +529,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -580,7 +562,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -622,7 +603,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -630,7 +610,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -638,7 +617,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -671,7 +649,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -679,7 +656,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -687,7 +663,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -730,7 +705,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -738,7 +712,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -855,7 +828,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hs_shrinkage",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -871,7 +844,19 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
-  "orig_nbformat": 4,
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
   "vscode": {
    "interpreter": {
     "hash": "ba0dea9307d0c4346c51e7770f4779439eb221952bbefe3363dda1641c4fee0e"
