--- a/notebooks/Documentation_TreeModelsfromScratch.ipynb
+++ b/notebooks/Documentation_TreeModelsfromScratch.ipynb
@@ -21,7 +21,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/philipp_heitmann/.pyenv/versions/3.10.6/envs/aug_hs_env/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Import TreeModelsfromScratch\n",
     "from TreeModelsFromScratch.DecisionTree import DecisionTree\n",
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +180,7 @@
        "0.7920902443374354"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +248,7 @@
        "0  0.233191  0.166232  0.383045     0.217532"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -306,6 +315,55 @@
    "source": [
     "print(\"Maximum depth of the fitted tree:\", dec_tree.max_depth_)\n",
     "print(\"Number of nodes in the fitted tree:\", dec_tree.n_nodes)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It also stores the FI calculated by MDI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.20786565, 0.17843255, 0.43843479, 0.17526701])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dec_tree.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'Pclass', 'Sex', 'PassengerId'], dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Feature names in\n",
+    "dec_tree.feature_names"
    ]
   },
   {
@@ -366,6 +424,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TreeModelsFromScratch.DecisionTree.Node at 0x157998130>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example of 1st entry in ode list (root node)\n",
+    "dec_tree.node_list[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -373,12 +452,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- `dec_tree.decision_paths`: List of node ids that form one branch (decision path) from root to leaf node.\n",
     "- `dec_tree.decision_paths_str`: Same as `.decision_paths` but as list of strings in more readable format\n",
-    "- Next to the general overview of the tree structure we can evaluate the decision path for an individual observation using `dec_tree.explain_decision_path()` function which takes in one observation"
+    "- Next to the general overview of the tree structure we can evaluate the decision path for an individual or many observations using `dec_tree.explain_decision_path()` function which takes in one observation"
    ]
   },
   {
@@ -408,6 +488,31 @@
    "source": [
     "# Explain decision path for 1st observation from test set\n",
     "dec_tree.explain_decision_path(X_test.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[list([0, 1, 25, 31, 33, 34, 35]),\n",
+       "        list([{'node_id': 0, 'feature': 'Sex', 'threshold': 0.5, 'value_observation': 0.0, 'decision': '0.0 <= 0.5 --> left'}, {'node_id': 1, 'feature': 'Pclass', 'threshold': 1.5, 'value_observation': 2.0, 'decision': '2.0 > 1.5 --> right'}, {'node_id': 25, 'feature': 'Age', 'threshold': 3.5, 'value_observation': 42.0, 'decision': '42.0 > 3.5 --> right'}, {'node_id': 31, 'feature': 'Age', 'threshold': 13.0, 'value_observation': 42.0, 'decision': '42.0 > 13.0 --> right'}, {'node_id': 33, 'feature': 'Pclass', 'threshold': 2.5, 'value_observation': 2.0, 'decision': '2.0 <= 2.5 --> left'}, {'node_id': 34, 'feature': 'PassengerId', 'threshold': 510.5, 'value_observation': 150.0, 'decision': '150.0 <= 510.5 --> left'}, {'node_id': 35, 'value': 0, 'prob_distribution': array([1., 0.])}])],\n",
+       "       [list([0, 1, 25, 26, 27]),\n",
+       "        list([{'node_id': 0, 'feature': 'Sex', 'threshold': 0.5, 'value_observation': 0.0, 'decision': '0.0 <= 0.5 --> left'}, {'node_id': 1, 'feature': 'Pclass', 'threshold': 1.5, 'value_observation': 2.0, 'decision': '2.0 > 1.5 --> right'}, {'node_id': 25, 'feature': 'Age', 'threshold': 3.5, 'value_observation': 3.0, 'decision': '3.0 <= 3.5 --> left'}, {'node_id': 26, 'feature': 'Pclass', 'threshold': 2.5, 'value_observation': 2.0, 'decision': '2.0 <= 2.5 --> left'}, {'node_id': 27, 'value': 1, 'prob_distribution': array([0., 1.])}])]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Explain decision path for 1st and 2nd observation from test set\n",
+    "dec_tree.explain_decision_path(X_test.iloc[:2])"
    ]
   },
   {
@@ -828,7 +933,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "aug_hs_env",
    "language": "python",
    "name": "python3"
   },
@@ -859,7 +964,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba0dea9307d0c4346c51e7770f4779439eb221952bbefe3363dda1641c4fee0e"
+    "hash": "b4de2a7d357b14f0fbb01d82892792068c7f97d04de6afc4c9ee8f432f9b64fe"
    }
   }
  },
